# master_informatica-TVG

./: README.md
docs/: README.md  questions1.md  questions2.md  questions3.md  script3.md  script4.md  script5.md
filters/blurring/src/: Blurring.cpp  CMakeLists.txt
filters/mean-and-median/src/: MeanAndMedian.cpp
project/: README.md
project/filtering/src/: CMakeLists.txt  Filtering.cpp
project/head/src/: CMakeLists.txt  Head.cpp
script1/: README.md
script1/task1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HelloWorld.sln  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  task1.sln  task1.vcxproj  task1.vcxproj.filters
script1/task1/src/: CMakeLists.txt  HelloWorld.cxx  helloWorld.cpp  task1.cxx
script1/task2/: ALL_BUILD.vcxproj  CMakeCache.txt  Image2.sln  Image2.vcxproj  Image2.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  task2.sln  task2.vcxproj  task2.vcxproj.filters
script1/task2/src/: CMakeLists.txt  Image2.cxx  showImage.cpp  task2.cxx
script1/task3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  task3.sln  task3.vcxproj  task3.vcxproj.filters
script1/task3/src/: CMakeLists.txt  getInfo.cpp  task3.cxx
script1/task4/src/: CMakeLists.txt  iterators.cpp
script2/: README.md
script2/exercise/src/: CMakeLists.txt  DICOMtoPNG.cpp
script2/task1/src/: ImageReadWrite.cpp
script2/task2/src/: CMakeLists.txt  ImageReadExportVTK.cpp
script2/task3/src/: CMakeLists.txt  RGBImageReadWrite.cpp
script2/task4/src/: CMakeLists.txt  ImageReadCastWrite.cpp
script2/task5/src/: CMakeLists.txt  ImageReadRegionOfInterestWrite.cpp
script2/task6/src/: CMakeLists.txt  ImageSeriesReadWrite.cpp
script3/: README.md
script3/exercise/src/: CMakeLists.txt
script3/task1/src/: CMakeLists.txt  CastingImageFilters.cpp
script3/task2/src/: CMakeLists.txt  MeanAndMedian.cpp
script3/task3/src/: Blurring.cpp
script3/task4/src/: CMakeLists.txt  EdgePreservingSmoothing.cpp
script4/: README.md
script4/task1/src/: CMakeLists.txt  Gradient.cpp
script4/task2/src/: CMakeLists.txt  Thresholding.cpp
script4/task3/src/: CMakeLists.txt  EdgeDetection.cpp
script5/: README.md
script5/exercise/src/: Segmentation.cpp
script5/mathematicalMorphologyBinary/src/: CMakeLists.txt  MathematicalMorphologyBinaryFilters.cpp
script5/mathematicalMorphologyGrayscale/src/: CMakeLists.txt  MathematicalMorphologyGrayscaleFilters.cpp
script5/task1/src/: CMakeLists.txt  Segmentation.cpp
script5/watershed/src/: CMakeLists.txt  WatershedSegmentation1.cpp
script7/: README.md
script7/cylinder/src/: CMakeLists.txt  Cylinder.cxx
script7/marchingCubes/src/: CMakeLists.txt  MarchingCubes.cpp
script7/rescaleIntensityImageFilter/src/: CMakeLists.txt  RescaleIntensityImageFilter.cpp
script8/: README.md
script8/example1/src/: CMakeLists.txt  Medical1.cpp
script8/example2/src/: CMakeLists.txt  Medical2.cpp
script8/example3/src/: CMakeLists.txt  Medical3.cpp
script8/example4/src/: CMakeLists.txt  Medical4.cpp
